--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,21 +2,21 @@
 <phpunit
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	bootstrap="./vendor/autoload.php"
-	xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.0/phpunit.xsd"
+	xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.4/phpunit.xsd"
 	cacheDirectory=".phpunit.cache"
 	displayDetailsOnTestsThatTriggerDeprecations="true"
 	displayDetailsOnTestsThatTriggerErrors="true"
 	displayDetailsOnTestsThatTriggerNotices="true"
 	displayDetailsOnTestsThatTriggerWarnings="true"
 >
-	<coverage>
-		<include>
-			<directory suffix=".php">./src</directory>
-		</include>
-	</coverage>
 	<testsuites>
 		<testsuite name="config">
 			<directory>./tests</directory>
 		</testsuite>
 	</testsuites>
+	<source>
+		<include>
+			<directory>./src</directory>
+		</include>
+	</source>
 </phpunit>
