--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
 		"stefna/ds-collection": "^1.0"
 	},
 	"require-dev": {
-		"squizlabs/php_codesniffer": "dev-master",
-		"stefna/codestyle": "^1.12",
-		"phpstan/phpstan": "^1.8",
+		"squizlabs/php_codesniffer": "^3.0",
+		"stefna/codestyle": "^1.15",
+		"phpstan/phpstan": "^1.10",
 		"bnf/phpstan-psr-container": "^1.0",
-		"phpunit/phpunit": "^10.4",
+		"phpunit/phpunit": "^10.5",
 		"phpstan/phpstan-phpunit": "^1.1",
 		"tomasvotruba/type-coverage": "^0.0.7",
 		"phpstan/extension-installer": "^1.2"
